@@ -1,5 +1,5 @@
 ![CI](https://github.com/masonakcamara/base-jump-logbook/actions/workflows/ci.yml/badge.svg)
-[![Release](https://img.shields.io/github/v/release/masonakcamara/base-jump-logbook)](https://github.com/your-org/base-jump-logbook/releases)
+[![Release](https://img.shields.io/github/v/release/masonakcamara/base-jump-logbook)](https://github.com/masonakcamara/base-jump-logbook/releases)
 
 # BASE Jump Logbook
 
@@ -11,35 +11,36 @@ JavaFX desktop application for logging BASE jumps and viewing integrated 5-day w
 2. [Tech Stack](#tech-stack)
 3. [Prerequisites](#prerequisites)
 4. [Installation](#installation)
-5. [Usage](#usage)
-   - [Run from Source](#run-from-source)
-   - [Download & Run](#download--run)
+5. [Usage](#usage)  
+   - [Run from Source](#run-from-source)  
+   - [Download and Run](#download-and-run)  
 6. [Building a Fat JAR](#building-a-fat-jar)
-7. [Contributing](#contributing)
-8. [License](#license)
+7. [Environment Variable Option](#environment-variable-option)
+8. [Contributing](#contributing)
+9. [License](#license)
 
 ## Features
 
-- Log jumps with date/time, location, GPS, height, gear details, jump type, media link
-- View 5-day temperature and wind speed charts for selected jump location
-- Embedded map view (OpenStreetMap) of jump coordinates
-- Full Create / Read / Update / Delete (CRUD) interface
+- Log jumps with date, time, location, coordinates, height, gear, jump type and media link
+- View 5-day temperature and wind speed charts for each jump location
+- Embedded map view via OpenStreetMap
+- Full Create, Read, Update, Delete (CRUD) interface
 - Export jump log to CSV
-- Packaged as a single "fat" JAR for easy distribution
+- Packaged as a single runnable JAR
 
 ## Tech Stack
 
-- Java 17
-- JavaFX (Controls, FXML, WebView)
-- Hibernate ORM with H2 embedded database
-- OpenWeatherMap API for weather data
-- Maven build system
+- Java 17  
+- JavaFX (Controls, FXML, WebView)  
+- Hibernate ORM with H2 embedded database  
+- OpenWeatherMap API for weather forecasts  
+- Maven build system  
 - JUnit 5 and Mockito for testing
 
 ## Prerequisites
 
-- Java Development Kit 17 or higher
-- Maven 3.6+
+- Java Development Kit 17 or higher  
+- Maven 3.6+  
 
 ## Installation
 
@@ -62,31 +63,60 @@ JavaFX desktop application for logging BASE jumps and viewing integrated 5-day w
 mvn clean javafx:run
 ```
 
-### Download & Run
+### Download and Run
 
-Every push builds and publishes a shaded JAR artifact. To download and run:
+1. Download the latest JAR from GitHub Releases.  
+2. Obtain a JavaFX SDK (version 20+) and note its `lib` folder path.
 
-1. Go to **Actions → base-jump-logbook → Artifacts** on GitHub  
-2. Download the `base-jump-logbook-*.jar` file  
+#### Windows (single line)
+
+```powershell
+java --module-path "C:\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml,javafx.web -jar base-jump-logbook-1.0-SNAPSHOT.jar
+```
+
+#### Windows (PowerShell, multi-line)
+
+```powershell
+java `
+  --module-path "C:\javafx-sdk-21.0.7\lib" `
+  --add-modules javafx.controls,javafx.fxml,javafx.web `
+  -jar base-jump-logbook-1.0-SNAPSHOT.jar
+```
+
+#### macOS / Linux
 
 ```bash
-java -jar base-jump-logbook-1.0-SNAPSHOT-shaded.jar
+export PATH_TO_FX=~/javafx-sdk-20/lib
+java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml,javafx.web -jar base-jump-logbook-1.0-SNAPSHOT.jar
 ```
 
 ## Building a Fat JAR
 
-From the project root:
+From the project root run:
 
 ```bash
 mvn clean package
 ```
 
-The shaded JAR will be in `target/` named `base-jump-logbook-1.0-SNAPSHOT-shaded.jar`.
+The shaded JAR will be in `target/` named `base-jump-logbook-1.0-SNAPSHOT.jar`.
+
+## Environment Variable Option
+
+Set the OpenWeatherMap key via environment variable instead of a properties file:
+
+```bash
+export OPENWEATHER_API_KEY=your_key_here
+java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml,javafx.web -jar base-jump-logbook-1.0-SNAPSHOT.jar
+```
 
 ## Contributing
 
-Contributions are welcome. Please fork the repo and open a pull request for any bug fixes or enhancements.
+Contributions are welcome. Fork the repo, make changes, and open a pull request.
 
 ## License
 
 This project is licensed under the MIT License. See [LICENSE](LICENSE) for details.
+
+## Demo
+
+![App Demo](docs/demo.png)
